--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,13 +22,13 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     # Build the Docker image
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/udagram-api-feed:latest .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/udagram-api-feed:latest .
 
     # Push the Docker image to Docker Hub
     - name: Push Docker image to Docker Hub
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/udagram-api-feed:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/udagram-api-feed:latest
